# DCMDB

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  transfer.yml  transfer2lumi.py  transfer2lumi.sh
.github/workflows/: case_availability.yaml  case_availability_PR.yaml  local_install.yaml  metadata_check.yaml  pre-commit.yaml  release.yaml
cases/Athens_fires_20240811/: data.json  meta.yaml
cases/Boris_Alaro_1000m/: data.json  meta.yaml
cases/CEurope_flooding_20240912_20240916/: data.json  meta.yaml
cases/Corsica_flooding_20240815/: data.json  meta.yaml
cases/Denmark_heatwave_20241124/: data.json  meta.yaml
cases/Europe_events_20240923_20240927/: data.json  meta.yaml
cases/Europe_events_20240930_20241004/: data.json  meta.yaml
cases/Finland500/: data.json  meta.yaml
cases/Germany500/: data.json  meta.yaml
cases/Ianos_2020/: IANOS500m_de_fc%Y%m%d%H+%LLLgrib2_fp.json  IANOS_43h221_de_fc%Y%m%d%H+%LLLgrib2_fp.json  data.json  meta.yaml  readme.md
cases/Italy_flooding_20240918/: data.json  meta.yaml
cases/Mallorca500/: data.json  meta.yaml
cases/NNordics_storm_20240918/: data.json  meta.yaml
cases/NNorway_fires_20240811/: data.json  meta.yaml
cases/Portugal500/: data.json  meta.yaml
cases/Pyrenees_flooding_20240813/: data.json  meta.yaml
cases/SEFrance_flooding_20240814/: data.json  meta.yaml
cases/SENorthSea_flooding_20240813/: data.json  meta.yaml
cases/Slovakia_heatwave_20240814/: data.json  meta.yaml
cases/Spain500/: data.json  meta.yaml
cases/Sweden500/: data.json  (+1 more)
dcmdb/: dcmdb.py
tests/: meta_schema.yaml
(+157 files in other folders)
